# g2o

./: .gitignore  CMakeLists.txt  config.h.in  g2o-config.cmake.in
g2o/: CMakeLists.txt  prefix.h  prefix.hpp  suffix.h
g2o/apps/: CMakeLists.txt
g2o/apps/g2o_cli/: CMakeLists.txt  dl_wrapper.cpp  dl_wrapper.h  g2o.cpp  g2o_common.cpp  g2o_common.h  output_helper.cpp  output_helper.h
g2o/apps/g2o_hierarchical/: CMakeLists.txt  backbone_tree_action.cpp  backbone_tree_action.h  edge_creator.cpp  edge_creator.h  edge_labeler.cpp  edge_labeler.h  edge_types_cost_function.cpp  edge_types_cost_function.h  g2o_hierarchical.cpp  g2o_hierarchical_test_functions.cpp  simple_star_ops.cpp  simple_star_ops.h  star.cpp  star.h
g2o/apps/g2o_simulator/: CMakeLists.txt  convertSegmentLine.cpp  converteSegmentLine.cpp  g2o_anonymize_observations.cpp  g2o_simulator_api.h  pointsensorparameters.cpp  pointsensorparameters.h  sensor_line3d.cpp  sensor_line3d.h  sensor_odometry.h  sensor_odometry2d.cpp  sensor_odometry2d.h  sensor_odometry3d.cpp  sensor_odometry3d.h  sensor_pointxy.cpp  sensor_pointxy.h  sensor_pointxy_bearing.cpp  sensor_pointxy_bearing.h  sensor_pointxy_offset.cpp  sensor_pointxy_offset.h  sensor_pointxyz.cpp  sensor_pointxyz.h  sensor_pointxyz_depth.cpp  sensor_pointxyz_depth.h  sensor_pointxyz_disparity.cpp  sensor_pointxyz_disparity.h  sensor_pose2d.cpp  sensor_pose2d.h  sensor_pose3d.cpp  sensor_pose3d.h  sensor_pose3d_offset.cpp  sensor_pose3d_offset.h  sensor_se3_prior.cpp  sensor_se3_prior.h  sensor_segment2d.cpp  sensor_segment2d.h  sensor_segment2d_line.cpp  sensor_segment2d_line.h  sensor_segment2d_pointline.cpp  sensor_segment2d_pointline.h  (+11 more)
g2o/apps/g2o_viewer/: CMakeLists.txt  g2o_qglviewer.cpp  g2o_qglviewer.h  g2o_viewer.cpp  gui_hyper_graph_action.cpp  gui_hyper_graph_action.h  main_window.cpp  main_window.h  properties_widget.cpp  properties_widget.h  run_g2o_viewer.cpp  run_g2o_viewer.h  stream_redirect.h  viewer_properties_widget.cpp  viewer_properties_widget.h
g2o/apps/linked_binaries/: CMakeLists.txt
g2o/core/: CMakeLists.txt  abi.h  base_binary_edge.h  base_binary_edge.hpp  base_edge.cpp  base_edge.h  base_multi_edge.h  base_multi_edge.hpp  base_unary_edge.h  base_unary_edge.hpp  base_vertex.h  base_vertex.hpp  batch_stats.cpp  batch_stats.h  block_solver.h  block_solver.hpp  cache.cpp  cache.h  creators.h  eigen_types.h  estimate_propagator.cpp  estimate_propagator.h  factory.cpp  factory.h  hyper_dijkstra.cpp  hyper_dijkstra.h  hyper_graph.cpp  hyper_graph.h  hyper_graph_action.cpp  hyper_graph_action.h  jacobian_workspace.cpp  jacobian_workspace.h  linear_solver.h  marginal_covariance_cholesky.cpp  marginal_covariance_cholesky.h  matrix_operations.h  matrix_structure.cpp  matrix_structure.h  openmp_mutex.h  optimizable_graph.cpp  (+35 more)
g2o/examples/: CMakeLists.txt
g2o/examples/ba/: CMakeLists.txt  ba_demo.cpp
g2o/examples/ba_anchored_inverse_depth/: CMakeLists.txt  ba_anchored_inverse_depth_demo.cpp
g2o/examples/bal/: CMakeLists.txt  bal_example.cpp
g2o/examples/calibration_odom_laser/: CMakeLists.txt  closed_form_calibration.cpp  closed_form_calibration.h  edge_se2_pure_calib.cpp  edge_se2_pure_calib.h  gm2dl_io.cpp  gm2dl_io.h  motion_information.h  sclam_helpers.cpp  sclam_helpers.h  sclam_laser_calib.cpp  sclam_odom_laser.cpp  sclam_pure_calibration.cpp
g2o/examples/data_convert/: convert_sba_slam3d.cpp
g2o/examples/data_fitting/: CMakeLists.txt  circle_fit.cpp  curve_fit.cpp
g2o/examples/g2o_unfold/: g2o-unfold.cpp  tools.cpp  tools.h
g2o/examples/icp/: CMakeLists.txt  gicp_demo.cpp  gicp_sba_demo.cpp
g2o/examples/interactive_slam/: CMakeLists.txt
g2o/examples/line_slam/: CMakeLists.txt  line_test.cpp  simulator_3d_line.cpp
g2o/examples/plane_slam/: CMakeLists.txt  simulator_3d_plane.cpp
g2o/examples/sba/: CMakeLists.txt  sba_demo.cpp
g2o/examples/simple_optimize/: CMakeLists.txt  simple_optimize.cpp
g2o/examples/slam2d/: CMakeLists.txt  draw_helpers.cpp  draw_helpers.h  main_window.cpp  main_window.h  slam2d_g2o.cpp  slam2d_viewer.cpp  slam2d_viewer.h
g2o/examples/sphere/: create_sphere.cpp
g2o/examples/tutorial_slam2d/: CMakeLists.txt  edge_se2.cpp  edge_se2.h  edge_se2_pointxy.cpp  edge_se2_pointxy.h  parameter_se2_offset.cpp  parameter_se2_offset.h  rand.h  se2.h  simulator.cpp  simulator.h  tutorial_slam2d.cpp  types_tutorial_slam2d.cpp  vertex_point_xy.cpp  vertex_point_xy.h  vertex_se2.cpp  vertex_se2.h
g2o/solvers/: CMakeLists.txt
g2o/solvers/cholmod/: CMakeLists.txt  linear_solver_cholmod.cpp  linear_solver_cholmod.h  solver_cholmod.cpp
g2o/solvers/csparse/: CMakeLists.txt  csparse_helper.cpp  csparse_helper.h  linear_solver_csparse.cpp  linear_solver_csparse.h  solver_csparse.cpp
g2o/solvers/dense/: CMakeLists.txt  linear_solver_dense.h  solver_dense.cpp
g2o/solvers/eigen/: CMakeLists.txt  linear_solver_eigen.h  solver_eigen.cpp
g2o/solvers/pcg/: CMakeLists.txt  linear_solver_pcg.h  linear_solver_pcg.hpp  solver_pcg.cpp
g2o/solvers/slam2d_linear/: CMakeLists.txt  slam2d_linear.cpp  solver_slam2d_linear.cpp  solver_slam2d_linear.h
g2o/solvers/structure_only/: CMakeLists.txt  structure_only.cpp  structure_only_solver.h
g2o/stuff/: CMakeLists.txt  command_args.cpp  command_args.h  filesys_tools.cpp  filesys_tools.h  macros.h  misc.h  opengl_primitives.cpp  opengl_primitives.h  opengl_wrapper.h  os_specific.c  os_specific.cpp  os_specific.h  property.cpp  property.h  sampler.cpp  sampler.h  scoped_pointer.h  sparse_helper.cpp  sparse_helper.h  string_tools.cpp  string_tools.h  tictoc.cpp  tictoc.h  timeutil.cpp  timeutil.h  unscented.h
g2o/types/: CMakeLists.txt
g2o/types/data/: CMakeLists.txt  data_queue.cpp  data_queue.h  laser_parameters.cpp  laser_parameters.h  raw_laser.cpp  raw_laser.h  robot_data.cpp  robot_data.h  robot_laser.cpp  robot_laser.h  types_data.cpp  types_data.h  vertex_ellipse.cpp  vertex_ellipse.h  vertex_tag.cpp  vertex_tag.h
g2o/types/icp/: CMakeLists.txt  types_icp.cpp  types_icp.h
g2o/types/sba/: CMakeLists.txt  sbacam.h  types_sba.cpp  types_sba.h  (+2 more)
(+196 files in other folders)
