ADD_SUBDIRECTORY(stuff)
ADD_SUBDIRECTORY(core)

IF(BUILD_APPS)
  ADD_SUBDIRECTORY(apps)
ENDIF(BUILD_APPS)

# Pre-canned types
ADD_SUBDIRECTORY(types)

# Solvers
ADD_SUBDIRECTORY(solvers)

# Examples
IF(BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples)
ENDIF(BUILD_EXAMPLES)

IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/playground")
  # Playground
  OPTION (BUILD_PLAYGROUND "Build g2o playground" ON)
  IF (BUILD_PLAYGROUND)
    MESSAGE(STATUS "building playground")
    ADD_SUBDIRECTORY(playground)
  ENDIF()
ENDIF()
